welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:5: error: type mismatch;
 found   : Unit
 required: Boolean
} else if(negative == true ){
       ^